--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "eslint": "^5.15.3",
     "expo": "^32.0.0",
+    "history": "^4.9.0",
     "react": "16.5.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-32.0.0.tar.gz",
     "react-router-native": "^5.0.0"
